Revision history for Path-Class-Rule

{{$NEXT}}

0.011     2012-03-15 09:55:33 EST5EDT

  [BUG FIXES]

    - Fixed major bugs in depth-first traversal relating to proper ordering
      and incorrectly returning directories that didn't match search
      criteria

0.010     2011-12-03 20:17:55 EST5EDT

  [OTHER]

    - Removed 'parent' and 'File::Copy' as dependencies.  Former wasn't
      really needed and latter was causing problems on 5.10.0.

0.009     2011-12-02 04:38:05 EST5EDT

  [BUG FIXES]

    - Fix t/error_handler.t regex to prevent errors from backslashes in
      paths on Windows

0.008     2011-11-30 09:54:03 EST5EDT

  [DOCUMENTATION]

    - Added File::Set to "See Also" section

  [OTHER]

    - Removed namespace::autoclean as a dependency because it pulls in
      the whole Moose stack.  [rt.cpan.org #72841, patch by Lars Dɪᴇᴄᴋᴏᴡ]

0.007     2011-10-26 23:50:57 America/New_York

  [BUG FIXES]

    - Fixed Win32 test failures

    - Fixed regexp handling on Perl 5.10

0.006     2011-10-19 21:40:01 America/New_York

  [BUG FIXES]

    - Fixed incompability with Perl < v5.14 [rt.cpan.org #71400]

  [DOCUMENTATION]

    - Clarified caveats about taint mode.  Path::Class::Rule runs under
      taint mode; it offers no options to automatically untaint data

0.005     2011-09-14 16:58:25 America/New_York

  [NEW FEATURES]

    - Added 'iname' rule method for case insensitive name matching

    - Added 'skip' logic method for easy custom pruning

    - Added 'error_handler' option to iteration method

    - Added lexical warnings category

  [BUG FIXES]

    - Directories that are not readable will warn and continue instead
      of throwing an error

  [DOCUMENTATION]

    - Various clarifications and typo fixes

0.004     2011-09-14 06:48:13 America/New_York

  [DOCUMENTATION]

    - Added additional modules to SEE ALSO commentary

0.003     2011-09-13 21:05:43 America/New_York

  [NEW FEATURES]
